@@ -11,6 +11,8 @@
 
 
 ngIRCd CVSHEAD
+  - Don't exit server if closing of a socket fails; instead ignore it and
+    pray that this will be "the right thing" ...
   - Implemented the IRC function "WHOWAS".
   - Don't enable assert() calls when not ./configure'd with --enable-debug.
   - Fixed ./configure test for TCP Wrappers: now it runs on Mac OS X as well.
@@ -599,4 +601,4 @@ ngIRCd 0.0.1, 31.12.2001
 
 
 -- 
-$Id: ChangeLog,v 1.270 2005/05/16 12:25:15 alex Exp $
+$Id: ChangeLog,v 1.271 2005/05/22 23:55:57 alex Exp $
